replaced editlist to list

--- a/rent_cd.html
+++ b/rent_cd.html
@@ -192,7 +192,7 @@
                                 ],
                                 */
 
-                                view:"editlist",
+                                view:"list",
                                 id:"editlistActors",
                                 template:"#fname# #sname#",
 
@@ -291,7 +291,7 @@
                     {
                         cols:[
                             {
-                                view:"editlist",
+                                view:"list",
                                 id:"editlistSellers",
                                 template:"#sname# #fname# #pname#",
 
@@ -510,7 +510,7 @@
                     {
                         cols:[
                             {
-                                view:"editlist",
+                                view:"list",
                                 id:"editlistCatalogue",
                                 template:"#mname#",
 
@@ -695,7 +695,7 @@
                     {
                         cols:[
                             {
-                                view:"editlist",
+                                view:"list",
                                 id:"editlistClients",
                                 template:"#sname# #fname# #pname#",
 
@@ -784,7 +784,7 @@
                                 ]
                             },
                             {
-                                view:"editlist",
+                                view:"list",
                                 id:"listClientHistory",
                                 //todo: make normal template
                                 template:"#mcd#",
